Fix 'Navbar' on small screens

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -2,7 +2,7 @@
 
 $max-width: 100%;
 $columns: 12;
-$gutter: 30px;
+$gutter: 2rem;
 $halfGutter: calc($gutter / 2);
 $margin: 1.5rem;
 // $sectionPadding: 50px;
